Crea Perfil, Actualizar Perfil, Login, Logout,

--- a/Proyectov2/usuario/templates/usuario/registro.html
+++ b/Proyectov2/usuario/templates/usuario/registro.html
@@ -14,7 +14,7 @@
         </form>
         <div class="border-top pt-3">
             <small class="text muted">
-                Ya tiene Cuneta? <a class="ml-2" href="#">Ingresar</a>
+                Ya tienes Cuenta? <a class="ml-2" href="{% url 'login' %}">Ingresar!</a>
             </small>
         </div>
     </div>
