--- a/Proyectov2/proveedor/templates/proveedor/base.html
+++ b/Proyectov2/proveedor/templates/proveedor/base.html
@@ -22,19 +22,31 @@
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
             <div class="container">
-                <a class="navbar-brand mr-4" href="/">ProvideMe</a>
+                {% if user.is_authenticated %}
+                    <a class="navbar-brand mr-4" href="/">ProvideMe</a>
+                {% else %}
+                    <a class="navbar-brand mr-4" href="#">ProvideMe</a>
+                {% endif %}
+                <!--<a class="navbar-brand mr-4" href="/">ProvideMe</a>-->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
             <div class="collapse navbar-collapse" id="navbarToggle">
                 <div class="navbar-nav mr-auto">
-                    <a class="nav-item nav-link" href="/">Home</a>
-                    <a class="nav-item nav-link" href="/about">About</a>
+                    {% if user.is_authenticated %}
+                        <a class="nav-item nav-link" href="/">Home</a>
+                        <a class="nav-item nav-link" href="/about">About</a>
+                    {% endif %}
                 </div>
         <!-- Navbar Right Side -->
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="#">Login</a>
-                    <a class="nav-item nav-link" href="#">Register</a>
+                {% if user.is_authenticated %}
+                    <a class="nav-item nav-link" href="{% url 'perfil' %}">Perfil</a>
+                    <a class="nav-item nav-link" href="{% url 'logout' %}">Cerrar Sesión</a>
+                {% else %}
+                    <a class="nav-item nav-link" href="{% url 'login' %}">Iniciar Sesión</a>
+                    <a class="nav-item nav-link" href="{% url 'registro' %}">Registrarse</a>
+                {% endif %}
                 </div>
             </div>
         </div>
@@ -52,19 +64,21 @@
                 {% endif %}
                 {% block content %}{% endblock %}
             </div>
-            <div class="col-md-4">
-                <div class="content-section">
-                    <h3>Our Sidebar</h3>
-                    <p class='text-muted'>You can put any information here you'd like.
-                    <ul class="list-group">
-                        <li class="list-group-item list-group-item-light">Latest Posts</li>
-                        <li class="list-group-item list-group-item-light">Announcements</li>
-                        <li class="list-group-item list-group-item-light">Calendars</li>
-                        <li class="list-group-item list-group-item-light">etc</li>
-                    </ul>
-                    </p>
+            {% if user.is_authenticated %}
+                <div class="col-md-4">
+                    <div class="content-section">
+                        <h3>Our Sidebar</h3>
+                        <p class='text-muted'>You can put any information here you'd like.
+                        <ul class="list-group">
+                            <li class="list-group-item list-group-item-light">Latest Posts</li>
+                            <li class="list-group-item list-group-item-light">Announcements</li>
+                            <li class="list-group-item list-group-item-light">Calendars</li>
+                            <li class="list-group-item list-group-item-light">etc</li>
+                        </ul>
+                        </p>
+                    </div>
                 </div>
-            </div>
+            {% endif %}
         </div>
     </main>
 
