--- a/Proyectov2/usuario/templates/usuario/login.html
+++ b/Proyectov2/usuario/templates/usuario/login.html
@@ -1,12 +1,12 @@
 {% extends "proveedor/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-    <div class="content-section">
+    <div class="content-section" >
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend align="center">ProvideMe</legend>
-                <legend class="border-bottom mb-4">Login</legend>
+                <legend class="border-bottom mb-4">Log In</legend>
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
@@ -15,7 +15,7 @@
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
-                Need an Account? <a class="ml-2" href="#">Sign Up Now</a>
+                ¿No Tienes Cuenta? <a class="ml-2" href="{% url 'registro' %}"> Registrate Ahora!</a>
             </small>
         </div>
     </div>
