--- a/Proyectov2/proveedor/templates/proveedor/base.html
+++ b/Proyectov2/proveedor/templates/proveedor/base.html
@@ -43,6 +43,9 @@
                 {% if user.is_authenticated %}
                     <a class="nav-item nav-link" href="{% url 'perfil' %}">Perfil</a>
                     <a class="nav-item nav-link" href="{% url 'logout' %}">Cerrar Sesión</a>
+                    {% if user.is_superuser and user.is_staff %}
+                        <a class="nav-item nav-link" href="/admin">Admin</a>
+                    {% endif %}
                 {% else %}
                     <a class="nav-item nav-link" href="{% url 'login' %}">Iniciar Sesión</a>
                     <a class="nav-item nav-link" href="{% url 'registro' %}">Registrarse</a>
