--- a/Proyectov2/proveedor/templates/proveedor/base.html
+++ b/Proyectov2/proveedor/templates/proveedor/base.html
@@ -25,7 +25,7 @@
                 {% if user.is_authenticated %}
                     <a class="navbar-brand mr-4" href="/">ProvideMe</a>
                 {% else %}
-                    <a class="navbar-brand mr-4" href="#">ProvideMe</a>
+                    <a class="navbar-brand mr-4" href="/">ProvideMe</a>
                 {% endif %}
                 <!--<a class="navbar-brand mr-4" href="/">ProvideMe</a>-->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
