--- a/Proyectov2/proveedor/templates/proveedor/base.html
+++ b/Proyectov2/proveedor/templates/proveedor/base.html
@@ -85,6 +85,10 @@
         </div>
     </main>
 
+     <footer class="bg-steel">
+    <img src="http://i63.tinypic.com/2qn6ooi.jpg" border="0" alt="Logo ACISLHA">
+    </footer>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
