--- a/Proyectov2/proveedor/templates/proveedor/proveedor.html
+++ b/Proyectov2/proveedor/templates/proveedor/proveedor.html
@@ -1,21 +1,29 @@
 {% extends "proveedor/base.html" %}
-
 {% block content %}
-
-    <div class="container" style="padding-bottom: 10px">
-     <form method="GET" action="{% url 'search' %}">
-        <input name="q" value="{{ request.GET.q }}" placeholder="search..">
-        <button class="btn btn-success" type="submit">
-            Search
-        </button>
-    </form>
+    <div class="row container ">
+        <div class="class-md-8 content-section">
+            <form method="GET" action="{% url 'search' %}">
+                <input name="q" value="{{ request.GET.q }}" placeholder="Búsqueda..">
+                <button class="btn btn-success" type="submit">
+                    Buscar
+                </button>
+            </form>
+        </div>
+        <div class="class-md-8 content-section" >
+            <form method="GET" action="{% url 'proveedor-create' %}">
+                <button class="btn btn-success" type="submit">
+                    Crear Proveedor
+                </button>
+            </form>
+        </div>
     </div>
+
 
     {% for provee in proveedor %}
         <article class="media content-section">
           <div class="media-body">
             <div class="article-metadata">
-              <a class="mr-2" href="{% url 'proveedor-detail' provee.id %}">{{ provee.nombre }}</a>
+              <a class="mr-2" href="#">{{ provee.nombre }}</a>
             </div>
             <h2><a class="article-title" href="{% url 'proveedor-detail' provee.id %}">{{ provee.nombre }}</a></h2>
               <p class="article-content">Provincia: {{ provee.provincia.nombre }}</p>
@@ -44,6 +52,6 @@
         <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
         <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
       {% endif %}
+    {% endif %}
 
-{% endif %}
 {% endblock content %}
