--- a/Proyectov2/proveedor/templates/proveedor/base.html
+++ b/Proyectov2/proveedor/templates/proveedor/base.html
@@ -35,7 +35,6 @@
                 <div class="navbar-nav mr-auto">
                     {% if user.is_authenticated %}
                         <a class="nav-item nav-link" href="/">Home</a>
-                        <a class="nav-item nav-link" href="/about">About</a>
                     {% endif %}
                 </div>
         <!-- Navbar Right Side -->
@@ -69,17 +68,19 @@
             </div>
             {% if user.is_authenticated %}
                 <div class="col-md-4">
-                    <div class="content-section">
-                        <h3>Our Sidebar</h3>
-                        <p class='text-muted'>You can put any information here you'd like.
-                        <ul class="list-group">
-                            <li class="list-group-item list-group-item-light">Latest Posts</li>
-                            <li class="list-group-item list-group-item-light">Announcements</li>
-                            <li class="list-group-item list-group-item-light">Calendars</li>
-                            <li class="list-group-item list-group-item-light">etc</li>
-                        </ul>
-                        </p>
-                    </div>
+                    {% if user.is_authenticated %}
+                        <div class="content-section">
+                            <h3>Filtro</h3>
+                            <p class='text-muted'>Filtros de Búsqueda
+                            <ul class="list-group">
+                                <li class="list-group-item list-group-item-light">Puntaje Mayor a 5</li>
+                                <li class="list-group-item list-group-item-light">Puntaje Mayor a 7</li>
+                                <li class="list-group-item list-group-item-light">Puntaje de 10</li>
+                                <li class="list-group-item list-group-item-light">Cartago</li>
+                            </ul>
+                            </p>
+                        </div>
+                    {% endif %}
                 </div>
             {% endif %}
         </div>
