Página y botones de reporte hechos. Falta crear la tabla de reporte y meter la ruta para que se cree la fila de porte dentro de la tabla.

--- a/Proyectov2/proveedor/templates/proveedor/proveedor_detail.html
+++ b/Proyectov2/proveedor/templates/proveedor/proveedor_detail.html
@@ -11,4 +11,20 @@
           <p class="article-content">Correo Electrónico: {{ object.correo }}</p>
       </div>
     </article>
+    <div class="row container ">
+        <div class="class-md-8 content-section" >
+            <form method="GET" action="{% url 'reportes' id=object.id %}">
+                <button class="btn btn-warning" type="submit">
+                    Reportar Proveedor
+                </button>
+            </form>
+        </div>
+        <div class="class-md-8 content-section" >
+            <form method="GET" action="{% url 'reportes' id=object.id %}">
+                <button class="btn btn-info" type="submit">
+                    Agregar a Favoritos!
+                </button>
+            </form>
+        </div>
+    </div>
 {% endblock content %}
