--- a/Proyectov2/proveedor/templates/proveedor/reportadoProveedor.html
+++ b/Proyectov2/proveedor/templates/proveedor/reportadoProveedor.html
@@ -6,23 +6,12 @@
       </div>
     </article>
     <div class="row container ">
-
         <div class="class-md-8 content-section" >
-            <form method="GET" action="{% url 'proveedor-proveedor' %}">
+            <form method="GET" action="{% url 'proveedor-detail' proveedor.id%}">
                 <button class="btn btn-danger" type="submit">
-                    No
-                </button>
-            </form>
-        </div>
-
-
-        <div class="class-md-8 content-section" >
-            <form method="GET" action="{% url 'reportadoProveedor' id=proveedor.id %}">
-                <button class="btn btn-success" type="submit">
-                    Si
+                    Regresar a Proveedor
                 </button>
             </form>
         </div>
     </div>
-
 {% endblock content %}
