--- a/Proyectov2/proveedor/templates/proveedor/base.html
+++ b/Proyectov2/proveedor/templates/proveedor/base.html
@@ -86,10 +86,36 @@
                             <h3>Filtro</h3>
                             <p class='text-muted'>Filtros de Búsqueda
                             <ul class="list-group">
-                                <li class="list-group-item list-group-item-light">Puntaje Mayor a 5</li>
-                                <li class="list-group-item list-group-item-light">Puntaje Mayor a 7</li>
-                                <li class="list-group-item list-group-item-light">Puntaje de 10</li>
-                                <li class="list-group-item list-group-item-light">Cartago</li>
+                                <li class="list-group-item list-group-item-light">
+                                    <a href='{% url 'proveedor-proveedor-filtro' '1' %}'>Puntaje Mayor a 5</a>
+                                </li>
+                                <li class="list-group-item list-group-item-light">
+                                    <a href='{% url 'proveedor-proveedor-filtro' '2' %}'>Puntaje Mayor a 7</a>
+                                </li>
+                                <li class="list-group-item list-group-item-light">
+                                    <a href='{% url 'proveedor-proveedor-filtro' '3' %}'>Puntaje de 10</a>
+                                </li>
+                                <li class="list-group-item list-group-item-light">
+                                    <a href='{% url 'proveedor-proveedor-filtro' '4' %}'>San José</a>
+                                </li>
+                                <li class="list-group-item list-group-item-light">
+                                    <a href='{% url 'proveedor-proveedor-filtro' '5' %}'>Heredia</a>
+                                </li>
+                                <li class="list-group-item list-group-item-light">
+                                    <a href='{% url 'proveedor-proveedor-filtro' '6' %}'>Cartago</a>
+                                </li>
+                                <li class="list-group-item list-group-item-light">
+                                    <a href='{% url 'proveedor-proveedor-filtro' '7' %}'>Alajuela</a>
+                                </li>
+                                <li class="list-group-item list-group-item-light">
+                                    <a href='{% url 'proveedor-proveedor-filtro' '8' %}'>Puntarenas</a>
+                                </li>
+                                <li class="list-group-item list-group-item-light">
+                                    <a href='{% url 'proveedor-proveedor-filtro' '9' %}'>Limón</a>
+                                </li>
+                                <li class="list-group-item list-group-item-light">
+                                    <a href='{% url 'proveedor-proveedor-filtro' '10' %}'>Guanacaste</a>
+                                </li>
                             </ul>
                             </p>
                         </div>
