Cambio de Contraseña y Envío Información a Correo Listo.

--- a/Proyectov2/proveedor/templates/proveedor/proveedor_detail.html
+++ b/Proyectov2/proveedor/templates/proveedor/proveedor_detail.html
@@ -41,6 +41,13 @@
                 </form>
             {% endif %}
         </div>
+        <div class="class-md-8 content-section" >
+            <form method="GET" action="{% url 'envioCorreo' id=proveedor.id %}">
+                <button class="btn btn-info" type="submit">
+                    Recibir Contacto Al Correo
+                </button>
+            </form>
+        </div>
     </div>
 
 {% endblock content %}
