--- a/Proyectov2/proveedor/templates/proveedor/base.html
+++ b/Proyectov2/proveedor/templates/proveedor/base.html
@@ -35,6 +35,7 @@
                 <div class="navbar-nav mr-auto">
                     {% if user.is_authenticated %}
                         <a class="nav-item nav-link" href="/">Home</a>
+                        <a class="nav-item nav-link" href="{% url 'favoritosUsuario' %}">Favoritos</a>
                     {% endif %}
                 </div>
         <!-- Navbar Right Side -->
