--- a/Proyectov2/proveedor/templates/proveedor/proveedor_detail.html
+++ b/Proyectov2/proveedor/templates/proveedor/proveedor_detail.html
@@ -1,4 +1,4 @@
-{% extends "proveedor/base.html" %}
+{% extends "proveedor/base2.html" %}
 {% block content %}
     <article class="media content-section">
       <div class="media-body">
@@ -12,7 +12,7 @@
       </div>
     </article>
     <div class="row container ">
-        <div class="class-md-8 content-section" >
+        <div class="content-section" >
             {% if reporteProveedor == "sinReportar" %}
                <form method="GET" action="{% url 'reportes' id=proveedor.id %}">
                     <button class="btn btn-warning" type="submit">
@@ -48,7 +48,78 @@
                 </button>
             </form>
         </div>
+        <div class="container-fluid">
+            <div class="content-section">
+            <h2>Calificación General: {{ proveedor.calificacion }}</h2>
+            </div>
+        </div>
+        <div class="container-fluid">
+        <div class="row content-section">
+                <div class="col-md-4">
+                    <h1>Comentarios</h1>
+                </div>
+                <div class="col-md-4"></div>
+                <div class="class-md-4" style="margin: 10px">
+                    <form method="GET" action="{% url 'calificar-prov' id=proveedor.id %}">
+                    <button class="btn btn-success" type="submit">
+                        Agregar Comentario
+                    </button>
+                    </form>
+            </div>
+        </div>
+
+            <div class="row content-section">
+
+                    {%  for comment in proveedor.comments.all %}
+                        <div class="col-md-4 content-section">
+                            <div class="col-md-12">
+                                <div style="padding: 10px">
+                                <strong> Fecha de Publicación:</strong> {{ comment.fecha }}
+                                </div>
+                                <div style="padding: 10px">
+                                <strong>Usuario:</strong> {{ comment.Usuario.username }}
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 content-section">
+                            <div class="col-md-12">
+                                <h5 style="padding: 10px">
+                                    {{ comment.texto }}
+                                </h5>
+                            </div>
+                        </div>
+                        <div class="col-md-4 content-section">
+
+                                <h4 align="center" > Ratings</h4>
+
+                            {%  for rat in comment.ratingComment.all %}
+                                <div class="row" style="margin:0px; padding: 0px">
+                                <div class="col-md-6 content-section">
+                                    <h5 align="center"> {{ rat.tipo }} </h5>
+                                </div>
+                                <div class="col-md-6 content-section">
+                                    <h5 align="center"> {{ rat.calificacion }} </h5>
+                                </div>
+                                </div>
+                            {%  endfor %}
+
+                        </div>
+                     {%  empty %}
+                            <div class=" container">
+                            <h3 style="padding: 10px; margin: 10px;">
+                                Sin Comentarios por el momento
+                            </h3>
+                            </div>
+
+                    {% endfor %}
+
+
+            </div>
+
+        </div>
     </div>
+
+
 
 {% endblock content %}
 
