--- a/Proyectov2/proveedor/templates/proveedor/base.html
+++ b/Proyectov2/proveedor/templates/proveedor/base.html
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
             <div class="container">
                 {% if user.is_authenticated %}
-                    <a class="navbar-brand mr-4" href="/">ProvideMe</a>
+                    <a class="navbar-brand mr-4" href="{% url 'proveedor-proveedor-orden' 0%}">ProvideMe</a>
                 {% else %}
                     <a class="navbar-brand mr-4" href="#">ProvideMe</a>
                 {% endif %}
@@ -34,8 +34,11 @@
             <div class="collapse navbar-collapse" id="navbarToggle">
                 <div class="navbar-nav mr-auto">
                     {% if user.is_authenticated %}
-                        <a class="nav-item nav-link" href="/">Home</a>
+                        <a class="nav-item nav-link" href="{% url 'proveedor-proveedor-orden' 0%}">Home</a>
                         <a class="nav-item nav-link" href="{% url 'favoritosUsuario' %}">Favoritos</a>
+                        {% if user.is_superuser and user.is_staff %}
+                            <a class="nav-item nav-link" href="{% url 'trafico'%}"> Tráfico Página </a>
+                        {%  endif %}
                     {% endif %}
                 </div>
         <!-- Navbar Right Side -->
