Todo _ final xD

--- a/Proyectov2/proveedor/templates/proveedor/base.html
+++ b/Proyectov2/proveedor/templates/proveedor/base.html
@@ -81,7 +81,7 @@
                                   <a href="{% url 'proveedor-proveedor-orden' '1' %}">Nombre</a>
                                 </li>
                                 <li class="list-group-item list-group-item-light">
-                                  <a href="#">Puntaje</a>
+                                  <a href="{% url 'proveedor-proveedor-orden' '2' %}">Puntaje</a>
                                 </li>
                             </ul>
                             </p>
