--- a/Proyectov2/proveedor/templates/proveedor/reportadoProveedor.html
+++ b/Proyectov2/proveedor/templates/proveedor/reportadoProveedor.html
@@ -2,7 +2,7 @@
 {% block content %}
     <article class="media content-section">
       <div class="media-body">
-          <h2>¿Seguro que quiere reportar a {{proveedor.nombre}}?</h2>
+          <h2>Se ha Reportado a {{proveedor.nombre}}</h2>
       </div>
     </article>
     <div class="row container ">
