--- a/Proyectov2/proveedor/templates/proveedor/comentarioForm.html
+++ b/Proyectov2/proveedor/templates/proveedor/comentarioForm.html
@@ -1,4 +1,4 @@
-{% extends "proveedor/base2.html" %}
+{% extends "proveedor/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
     <div class = "content-section">
