--- a/Proyectov2/proveedor/templates/proveedor/mensajeRespuesta.html
+++ b/Proyectov2/proveedor/templates/proveedor/mensajeRespuesta.html
@@ -1,4 +1,4 @@
-{% extends "proveedor/base2.html" %}
+{% extends "proveedor/base.html" %}
 {% block content %}
     <article class="media content-section">
       <div class="media-body">
