--- a/Proyectov2/proveedor/templates/proveedor/base.html
+++ b/Proyectov2/proveedor/templates/proveedor/base.html
@@ -18,12 +18,13 @@
 
 </head>
 
-<body style="min-width: 600px; min-height: 800px" >
-    <header class="site-header">
-        <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
-            <div class="container">
+<body style="min-width: 100%; min-height: 100vh; height: 100vh" >
+    <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top" style="margin-bottom: 0px">
+            <div class="container-fluid">
                 {% if user.is_authenticated %}
-                    <a class="navbar-brand mr-4" href="{% url 'proveedor-proveedor-orden' 0%}">ProvideMe</a>
+                    <a class="navbar-brand mr-4" href="{% url 'proveedor-proveedor-orden' 0%}">
+                        <img alt="Logo" style="max-width:60px; max-height: 60px; margin: 0px; padding: 0px;" src="/static/image/LogoProvideMe.png">
+                    </a>
                 {% else %}
                     <a class="navbar-brand mr-4" href="#">ProvideMe</a>
                 {% endif %}
@@ -34,10 +35,10 @@
             <div class="collapse navbar-collapse" id="navbarToggle">
                 <div class="navbar-nav mr-auto">
                     {% if user.is_authenticated %}
-                        <a class="nav-item nav-link" href="{% url 'proveedor-proveedor-orden' 0%}">Home</a>
-                        <a class="nav-item nav-link" href="{% url 'favoritosUsuario' %}">Favoritos</a>
+                        <a class="nav-item nav-link" href="{% url 'proveedor-proveedor-orden' 0%}"><h5 style="color: rgba(255,255,255,.75); margin-right: 10px">Home</h5></a>
+                        <a class="nav-item nav-link" href="{% url 'favoritosUsuario' %}"><h5 style="color: rgba(255,255,255,.75); margin-right: 10px">Favoritos</h5></a>
                         {% if user.is_superuser and user.is_staff %}
-                            <a class="nav-item nav-link" href="{% url 'trafico'%}"> Tráfico Página </a>
+                            <a class="nav-item nav-link" href="{% url 'trafico'%}"> <h5 style="color: rgba(255,255,255,.75); margin-right: 10px">Tráfico Página</h5> </a>
                         {%  endif %}
                     {% endif %}
                 </div>
@@ -57,74 +58,24 @@
             </div>
         </div>
         </nav>
+
+    <header class="page-header container-fluid" style="margin: 10px">
+    {% block header-content %} {%  endblock %}
     </header>
 
 
-    <main role="main" class="container">
-        <div class="row">
+    <main role="main" class="container-fluid">
+        <div class="row container-fluid">
             <div class="col-md-8">
                 {% if messages %}
                     {% for message in messages %}
                         <div class="alert alert-{{ message.tags }}">{{ message }}</div>
                 {% endfor %}
                 {% endif %}
+
                 {% block content %}{% endblock %}
             </div>
-            {% if user.is_authenticated %}
-                <div class="col-md-4">
-                    {% if user.is_authenticated %}
-                        <div class="content-section">
-                            <h3>Orden</h3>
-                            <p class='text-muted'>Ordenar Proveedores Por
-                            <ul class="list-group">
-                                <li class="list-group-item list-group-item-light">
-                                  <a href="{% url 'proveedor-proveedor-orden' '1' %}">Nombre</a>
-                                </li>
-                                <li class="list-group-item list-group-item-light">
-                                  <a href="{% url 'proveedor-proveedor-orden' '2' %}">Puntaje</a>
-                                </li>
-                            </ul>
-                            </p>
-                        </div>
-                        <div class="content-section">
-                            <h3>Filtro</h3>
-                            <p class='text-muted'>Filtros de Búsqueda
-                            <ul class="list-group">
-                                <li class="list-group-item list-group-item-light">
-                                    <a href='{% url 'proveedor-proveedor-filtro' '1' %}'>Puntaje Mayor a 5</a>
-                                </li>
-                                <li class="list-group-item list-group-item-light">
-                                    <a href='{% url 'proveedor-proveedor-filtro' '2' %}'>Puntaje Mayor a 7</a>
-                                </li>
-                                <li class="list-group-item list-group-item-light">
-                                    <a href='{% url 'proveedor-proveedor-filtro' '3' %}'>Puntaje de 10</a>
-                                </li>
-                                <li class="list-group-item list-group-item-light">
-                                    <a href='{% url 'proveedor-proveedor-filtro' '4' %}'>San José</a>
-                                </li>
-                                <li class="list-group-item list-group-item-light">
-                                    <a href='{% url 'proveedor-proveedor-filtro' '5' %}'>Heredia</a>
-                                </li>
-                                <li class="list-group-item list-group-item-light">
-                                    <a href='{% url 'proveedor-proveedor-filtro' '6' %}'>Cartago</a>
-                                </li>
-                                <li class="list-group-item list-group-item-light">
-                                    <a href='{% url 'proveedor-proveedor-filtro' '7' %}'>Alajuela</a>
-                                </li>
-                                <li class="list-group-item list-group-item-light">
-                                    <a href='{% url 'proveedor-proveedor-filtro' '8' %}'>Puntarenas</a>
-                                </li>
-                                <li class="list-group-item list-group-item-light">
-                                    <a href='{% url 'proveedor-proveedor-filtro' '9' %}'>Limón</a>
-                                </li>
-                                <li class="list-group-item list-group-item-light">
-                                    <a href='{% url 'proveedor-proveedor-filtro' '10' %}'>Guanacaste</a>
-                                </li>
-                            </ul>
-                            </p>
-                        </div>
-                    {% endif %}
-            {% endif %}
+            {% block sidebar %} {% endblock %}
         </div>
     </main>
 
