--- a/Proyectov2/proveedor/templates/proveedor/proveedor.html
+++ b/Proyectov2/proveedor/templates/proveedor/proveedor.html
@@ -1,5 +1,22 @@
 
 {% extends "proveedor/base.html" %}
+
+{% block header-content %}
+      <div class="row">
+        <div class="col-md-12">
+          <div class="header">
+             <div class="overlay"></div>
+                <div class="description">
+                <h1 style="color: #000000">ProvideMe</h1>
+                <h3 style="color: #ffffffff;">ProvideMe es una página web con un listado de proveedores para el área de seguridad laboral y su objetivo principal es facilitar la labor de contacto y compra de equipos de dichos proveedores.</h3>
+            </div>
+          </div>
+        </div>
+  </div>
+
+</div>
+{% endblock %}
+
 {% block content %}
     <div class="row container ">
         <div class="class-md-8 content-section">
@@ -58,4 +75,65 @@
       {% endif %}
     {% endif %}
 
+
 {% endblock content %}
+
+{% block sidebar %}
+
+    {% if user.is_authenticated %}
+                <div class="col-md-4">
+                    {% if user.is_authenticated %}
+                        <div class="content-section">
+                            <h3>Orden</h3>
+                            <p class='text-muted'>Ordenar Proveedores Por
+                            <ul class="list-group">
+                                <li class="list-group-item list-group-item-light">
+                                  <a href="{% url 'proveedor-proveedor-orden' '1' %}">Nombre</a>
+                                </li>
+                                <li class="list-group-item list-group-item-light">
+                                  <a href="{% url 'proveedor-proveedor-orden' '2' %}">Puntaje</a>
+                                </li>
+                            </ul>
+                            </p>
+                        </div>
+                        <div class="content-section">
+                            <h3>Filtro</h3>
+                            <p class='text-muted'>Filtros de Búsqueda
+                            <ul class="list-group">
+                                <li class="list-group-item list-group-item-light">
+                                    <a href='{% url 'proveedor-proveedor-filtro' '1' %}'>Puntaje Mayor a 5</a>
+                                </li>
+                                <li class="list-group-item list-group-item-light">
+                                    <a href='{% url 'proveedor-proveedor-filtro' '2' %}'>Puntaje Mayor a 7</a>
+                                </li>
+                                <li class="list-group-item list-group-item-light">
+                                    <a href='{% url 'proveedor-proveedor-filtro' '3' %}'>Puntaje de 10</a>
+                                </li>
+                                <li class="list-group-item list-group-item-light">
+                                    <a href='{% url 'proveedor-proveedor-filtro' '4' %}'>San José</a>
+                                </li>
+                                <li class="list-group-item list-group-item-light">
+                                    <a href='{% url 'proveedor-proveedor-filtro' '5' %}'>Heredia</a>
+                                </li>
+                                <li class="list-group-item list-group-item-light">
+                                    <a href='{% url 'proveedor-proveedor-filtro' '6' %}'>Cartago</a>
+                                </li>
+                                <li class="list-group-item list-group-item-light">
+                                    <a href='{% url 'proveedor-proveedor-filtro' '7' %}'>Alajuela</a>
+                                </li>
+                                <li class="list-group-item list-group-item-light">
+                                    <a href='{% url 'proveedor-proveedor-filtro' '8' %}'>Puntarenas</a>
+                                </li>
+                                <li class="list-group-item list-group-item-light">
+                                    <a href='{% url 'proveedor-proveedor-filtro' '9' %}'>Limón</a>
+                                </li>
+                                <li class="list-group-item list-group-item-light">
+                                    <a href='{% url 'proveedor-proveedor-filtro' '10' %}'>Guanacaste</a>
+                                </li>
+                            </ul>
+                            </p>
+                        </div>
+                    {% endif %}
+            {% endif %}
+
+{% endblock %}
