--- a/Proyectov2/proveedor/templates/proveedor/proveedor_detail.html
+++ b/Proyectov2/proveedor/templates/proveedor/proveedor_detail.html
@@ -1,4 +1,4 @@
-{% extends "proveedor/base2.html" %}
+{% extends "proveedor/base.html" %}
 {% block content %}
     <article class="media content-section">
       <div class="media-body">
@@ -81,23 +81,35 @@
                             <div class="col-md-4 content-section">
                                 <div style="padding: 10px">
                                         {% if not comment.approved %}
+                                            <div class="container">
+                                                <h3> Este comentario no está aprobado</h3>
+                                            </div>
+                                            <div class="row container">
+                                            <div class="col-md-6">
                                             <form method="GET" action="{% url 'comment_approve' pk=comment.pk id=proveedor.id %}">
                                                 <button class="btn btn-success" type="submit">
                                                     Aprobar
                                                 </button>
                                             </form>
+                                                </div>
+                                                <div class="col-md-6">
                                             <form method="GET" action="{% url 'comment_remove' pk=comment.pk id=proveedor.id %}">
                                                 <button class="btn btn-success" type="submit">
                                                     Borrar
                                                 </button>
+                                                </div>
                                             </form>
+                                            </div>
+                                            <div>
+                                            <hr>
+                                            </div>
                                         {% endif %}
                                     </div>
                                 <div class="col-md-12">
-                                    <div style="padding: 10px">
+                                    <div style="padding: 15px">
                                         <strong> Fecha de Publicación:</strong> {{ comment.fecha }}
                                     </div>
-                                    <div style="padding: 10px">
+                                    <div style="padding: 15px">
                                         <strong>Usuario:</strong> {{ comment.Usuario.username }}
                                     </div >
                                 </div>
